@@ -9,7 +9,7 @@ from rasterio.dtypes import _getnpdtype
 from rasterio.enums import MergeAlg
 
 from rasterio._err cimport exc_wrap_int, exc_wrap_pointer
-from rasterio._io cimport DatasetReaderBase, InMemoryRaster, io_auto
+from rasterio._io cimport DatasetReaderBase, MemoryDataset, io_auto
 
 
 log = logging.getLogger(__name__)
@@ -54,8 +54,8 @@ def _shapes(image, mask, connectivity, transform):
     cdef OGRLayerH layer = NULL
     cdef OGRFieldDefnH fielddefn = NULL
     cdef char **options = NULL
-    cdef InMemoryRaster mem_ds = None
-    cdef InMemoryRaster mask_ds = None
+    cdef MemoryDataset mem_ds = None
+    cdef MemoryDataset mask_ds = None
     cdef ShapeIterator shape_iter = None
     cdef int fieldtp
 
@@ -74,7 +74,7 @@ def _shapes(image, mask, connectivity, transform):
     try:
 
         if dtypes.is_ndarray(image):
-            mem_ds = InMemoryRaster(image=image, transform=transform)
+            mem_ds = MemoryDataset(image, transform=transform)
             band = mem_ds.band(1)
         elif isinstance(image, tuple):
             rdr = image.ds
@@ -92,7 +92,7 @@ def _shapes(image, mask, connectivity, transform):
 
             if dtypes.is_ndarray(mask):
                 # A boolean mask must be converted to uint8 for GDAL
-                mask_ds = InMemoryRaster(image=mask.astype('uint8'),
+                mask_ds = MemoryDataset(mask.astype('uint8'),
                                          transform=transform)
                 maskband = mask_ds.band(1)
             elif isinstance(mask, tuple):
@@ -172,9 +172,9 @@ def _sieve(image, size, out, mask, connectivity):
     cdef int retval
     cdef int rows
     cdef int cols
-    cdef InMemoryRaster in_mem_ds = None
-    cdef InMemoryRaster out_mem_ds = None
-    cdef InMemoryRaster mask_mem_ds = None
+    cdef MemoryDataset in_mem_ds = None
+    cdef MemoryDataset out_mem_ds = None
+    cdef MemoryDataset mask_mem_ds = None
     cdef GDALRasterBandH in_band = NULL
     cdef GDALRasterBandH out_band = NULL
     cdef GDALRasterBandH mask_band = NULL
@@ -206,7 +206,7 @@ def _sieve(image, size, out, mask, connectivity):
     try:
 
         if dtypes.is_ndarray(image):
-            in_mem_ds = InMemoryRaster(image=image)
+            in_mem_ds = MemoryDataset(image)
             in_band = in_mem_ds.band(1)
         elif isinstance(image, tuple):
             rdr = image.ds
@@ -216,7 +216,7 @@ def _sieve(image, size, out, mask, connectivity):
 
         if dtypes.is_ndarray(out):
             log.debug("out array: %r", out)
-            out_mem_ds = InMemoryRaster(image=out)
+            out_mem_ds = MemoryDataset(out)
             out_band = out_mem_ds.band(1)
         elif isinstance(out, tuple):
             udr = out.ds
@@ -234,7 +234,7 @@ def _sieve(image, size, out, mask, connectivity):
 
             if dtypes.is_ndarray(mask):
                 # A boolean mask must be converted to uint8 for GDAL
-                mask_mem_ds = InMemoryRaster(image=mask.astype('uint8'))
+                mask_mem_ds = MemoryDataset(mask.astype('uint8'))
                 mask_band = mask_mem_ds.band(1)
 
             elif isinstance(mask, tuple):
@@ -319,7 +319,8 @@ def _rasterize(shapes, image, transform, all_touched, merge_alg):
     cdef OGRGeometryH *geoms = NULL
     cdef char **options = NULL
     cdef double *pixel_values = NULL
-    cdef InMemoryRaster mem = None
+    cdef MemoryDataset mem = None
+    cdef int *band_ids = NULL
 
     try:
         if all_touched:
@@ -346,20 +347,21 @@ def _rasterize(shapes, image, transform, all_touched, merge_alg):
                     geometry, i, value)
 
         # TODO: is a vsimem file more memory efficient?
-        with InMemoryRaster(image=image, transform=transform) as mem:
+        with MemoryDataset(image, transform=transform) as mem:
+            band_ids = <int *>CPLMalloc(mem.count*sizeof(int))
+            for i in range(mem.count):
+                band_ids[i] = i + 1
             exc_wrap_int(
                 GDALRasterizeGeometries(
-                    mem.handle(), 1, mem.band_ids, num_geoms, geoms, NULL,
+                    mem.handle(), 1, band_ids, num_geoms, geoms, NULL,
                     NULL, pixel_values, options, NULL, NULL))
-
-            # Read in-memory data back into image
-            image = mem.read()
 
     finally:
         for i in range(num_geoms):
             _deleteOgrGeom(geoms[i])
         CPLFree(geoms)
         CPLFree(pixel_values)
+        CPLFree(band_ids)
         if options:
             CSLDestroy(options)
 
